<resources>
    <string name="app_name">Beauty saloon</string>
    <string name="beauty_saloon">beauty saloon</string>
    <string name="text_auth">Enter login and password</string>
    <string name="text_login">Login (E-mail)</string>
    <string name="text_password">Password</string>
    <string name="btn_enter">To come in</string>
    <string name="btn_registration">Register</string>
    <string name="btn_exit">Sign out</string>
    <string name="btn_add_client">Add client to database</string>
    <string name="btn_find_client">Find a client in the database</string>
    <string name="btn_photo_client">Add client photo</string>
    <string name="btn_save_client">Add client base</string>
    <string name="btn_read_base">View customer base</string>
    <string name="btn_add_cart">Add/view customer card</string>
    <string name="btn_start_find_client">Search</string>
    <string name="text_find">Enter the client is last name and click the "SEARCH" button</string>
    <string name="btn_start_record">Audio recording beginning</string>
    <string name="btn_stop_record">Stop recording</string>
    <string name="btn_save_procedure">Save procedure</string>
    <string name="btn_menu">Back to main menu</string>
    <string name="btn_play_audio">Listen to audio recording</string>
    <string name="cartView_pattern">The procedure was created by the user:</string>
    <string name="status_record">Recording in progress</string>
    <string name="status_stop">Recording stopped</string>
    <string name="btn_short_push">Create a short message</string>
    <string name="btn_enter_main_menu">Go to main menu</string>
    <string name="btn_stop_play">Stop playback</string>
    <string name="btn_delete_user">Deleting a user</string>
    <string name="text_delete_user">To delete a user, click on the corresponding E-mail</string>
    <string name="te_user_email">Email user</string>
    <string name="note_text_1">Enter login and password</string>
    <string name="note_text_2">User defined, signed in</string>
    <string name="note_text_3">User not defined</string>
    <string name="note_text_4">Check your email to confirm your registration</string>
    <string name="note_text_5">Email is invalid, please check your entry</string>
    <string name="note_text_6">Check your E-mail to complete the registration</string>
    <string name="note_text_7">User registered successfully</string>
    <string name="note_text_8">Registration Failed</string>
    <string name="note_text_9">Enter login and password</string>
    <string name="note_text_10">Add Audio Recording</string>
    <string name="note_text_11">New procedure record saved</string>
    <string name="note_text_12">Procedure not saved</string>
    <string name="note_text_13">Enter customer is last name</string>
    <string name="note_text_14">No matches</string>
    <string name="note_text_15">New customer record saved</string>
    <string name="note_text_16">Fill in the fields</string>
    <string name="note_text_17">Playback stopped</string>
    <string name="note_text_18">Playback enabled</string>
    <string name="note_text_19">Last name of the client</string>
    <string name="note_text_20">Total records in the database : </string>
    <string name="note_text_21">№ records</string>
    <string name="note_text_22">Search result</string>

</resources>