<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_save"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_auth" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_photo_client"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/three_level2"
            />

        <EditText
            android:id="@+id/edit_name_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/transparent"
            android:hint="Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textColorHint="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_secondName_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/transparent"
            android:hint="SecondName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textColorHint="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_phone_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/transparent"
            android:hint="tel"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_add_photo_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue_press"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:text="@string/btn_photo_client" />

        <Button
            android:id="@+id/button_save_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue_press"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:text="@string/btn_save_client" />

        <Button
            android:id="@+id/button_read_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_blue_press"
            android:text="@string/btn_read_base"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>
