<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_auth"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_cart_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/teal_700"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="TextView" />

            <TextView
                android:id="@+id/text_cart_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/teal_700"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="TextView" />

            <TextView
                android:id="@+id/text_cart_sec_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/teal_700"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="TextView" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText_procedure"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_height="250dp"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="Procedure"
            android:inputType="textMultiLine"
            android:text=""
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/text_recorders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:hint="Recorders"
            android:text=""
            android:textColorHint="@color/teal_700" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_start_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_blue_press"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:text="@string/btn_start_record" />

            <Button
                android:id="@+id/button_stop_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:background="@drawable/btn_blue_press"
                android:text="@string/btn_stop_record" />
        </LinearLayout>

        <Button
            android:id="@+id/button_save_proced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_blue_press"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:text="@string/btn_save_procedure" />

        <ListView
            android:id="@+id/listView_proced"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="250dp">

        </ListView>



    </LinearLayout>
</RelativeLayout>